--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: ruby
+cache: bundler
 rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - ruby-head
+  - jruby-19mode
+  - rbx-2
+matrix:
+  include:
+    - rvm: jruby-19mode
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
+  fast_finish: true
