--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: ruby
 cache: bundler
+bundler_args: --without yard pry
 rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
   - ruby-head
-  - jruby-19mode
+  - rbx
   - rbx-2
 matrix:
   include:
     - rvm: jruby-19mode
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-head
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
+  allow_failure:
+    - rvm: ruby-head
+    - rvm: jruby-head
   fast_finish: true
