--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ rvm:
   - rbx-2
 matrix:
   include:
+    - rvm: jruby-18mode
+      env: JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-19mode
       env: JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-head
